{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "c10db4c2-9dcc-4b7d-8593-7bcd1ec4490d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "26bc3655-3bed-488e-bec3-9747ec0a1920",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "33be9d7a-15d1-4543-9e08-f433fa254d0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "0bf4f256-2d58-4627-80fa-e444f032c36f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "3236f887-89fa-4d47-b079-33f5233f1399",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "d6aaaddf-4b88-479f-a284-5335defcb542",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipWeapon",
                    "type": "Button",
                    "id": "5a77e1e1-4f6f-4c5e-a1dd-7f73b63d1a5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "bf624cd5-18b1-4854-9326-f505be5118fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CastSpell",
                    "type": "Button",
                    "id": "ac155cbb-9e87-4ede-8fee-37ae0276cbfb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectedSpell",
                    "type": "Button",
                    "id": "88343acf-3551-4bfc-b011-38a133ef2447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Journal",
                    "type": "Button",
                    "id": "91e16703-cd05-4a64-b591-250a6dfbc73a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Map",
                    "type": "Button",
                    "id": "ad8cef9f-632b-49aa-9180-ab378fdd8ce5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "253df216-f139-45ec-961f-eb96a266a5c6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e5eddd21-89f2-4642-845d-7b71fcd8c96e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1ccbc841-2262-4254-bb72-25659afbaf0b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9b3628e2-63f7-4ed2-9fb1-987aafd28f01",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fa510a41-8f37-4f85-9f70-4e0541b11da0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "26790d3c-0b2c-4add-a7a2-6865f6d3f8a8",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f39a7881-a30d-4283-bb93-bb97b10508a1",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32339ca5-ab18-4a95-a0cd-1e676521b301",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15f43dd6-81b8-468d-aaa3-a47f45883750",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c062436c-ae6f-4e2a-a199-452e50cf3cb4",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EquipWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af916a6c-0921-45b4-885a-0993c75cb23e",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee1d1524-17f4-46f3-9199-aef11f34a435",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CastSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5680daba-160c-4d60-89fa-d05fc7f60786",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SelectedSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e836712c-87bc-496c-9ec4-604a36623926",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SelectedSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf1c1da5-ef62-4f9b-8906-1eee4605bd14",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SelectedSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c94ac3d5-683e-4081-b136-922050301868",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SelectedSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc548e4f-8ece-41bb-bbd5-60d403369957",
                    "path": "<Keyboard>/j",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Journal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d456bb82-df9d-4b99-b6fd-9d8e772d7bda",
                    "path": "<Keyboard>/m",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}